fixed issue with flex wrap

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -119,7 +119,6 @@ font-size: 20px;
   height: 100vh;
   display: flex;
   flex-direction: row-reverse;
-  flex-wrap: wrap;
   justify-content: space-around;
 }
 
@@ -134,7 +133,7 @@ font-size: 20px;
   /* background-image: linear-gradient(to right, var(--ivory)40%, var(--tiffanyBlue)); */
   padding: 0 50px;
    /* width: 30%; */
-    margin: 5px 90px 0px 0px;
+    margin: 5px 60px 0px 0px;
    font-family: var(--roboto);
    display: flex;
    flex-direction: column;
